# hood

./: .gitignore  CITATION.cff  README.md  chromium.sh  code.sh  code_proxy.sh  download-vsx.sh  init_develpment_environment.sh  init_live_session.sh  init_pi.sh  install_code.sh  note.txt  show_cert.sh  start_chromium.sh  start_weak_chromium.sh  umount_all.sh  w3m_search.sh
paper/: biblio.bib  build.sh  paper.tex  usiinfthesis.cls
prototype/: 02-my-dispatcher  README.md  before-network.service  dnsmasq.conf  install.sh  mntinstall.sh  rc.local  run_adguard.sh  sysctl.conf
proxy/: .gitignore  CMakeLists.txt  build.sh  build_debug.sh  cmake_install.cmake  confgure_dns.sh  hood_proxy.conf  install_dependencies_bsd.sh  install_dependencies_debian.sh  run_debuddg.sh  run_debug.sh
proxy/src/: configuration.cpp  configuration.hpp  engine.cpp  engine.hpp  logging.cpp  logging.hpp  main.cpp  message_reader.hpp  name_service_client.cpp  name_service_client.hpp  network.cpp  network.hpp  server.cpp  server.hpp  ssl_definition_raw.hpp  tls_check_certificate.cpp  tls_check_certificate.hpp  tls_check_certificate_worker.cpp  tls_check_certificate_worker.hpp  tls_context.cpp  tls_context.hpp  tls_definition.hpp  tls_definition_raw.hpp  tls_message_decoder.cpp  tls_message_decoder.hpp  tls_message_encoder.cpp  tls_message_encoder.hpp  tls_security_policy.cpp  tls_security_policy.hpp  version.h
scripts/: 00-firewall.conf  02-hood-dispatcher  02-hood-firewall-net.rules  02-my-dispatcher  AdGuardHome.yaml  NetworkManager.conf  backup.sh  before-network.service  build-image.sh  hosts  (+39 more)
(+41 files in other folders)
